[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44" # 错误处理包
clap = {version="4.2.7", features = ["derive"]} # 命令行参数解析包
colored = "2.0.0" # 颜色包
jsonxf = "1.1.1" # json格式化包
mime = "0.3.16" # mime类型包
tokio = {version="1.28.0", features = ["full"]} # 异步处理库
reqwest = {version="0.11.17", features = ["json"]} # http请求库

