[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44" # 错误处理
axum = "0.6.18" # web 框架
base64 = "0.21.0" # base64 编码/解码
bytes = "1.4.0" # 处理字节流操作
image = "0.24.6" # 图片处理
lazy_static = "1.4.0" # 通过宏实现静态变量
lru = "0.10.0" # lru 缓存
percent-encoding = "2.2.0" # url 编码/解码
photon-rs = "0.3.2" # 图片处理
prost = "0.11.9" # protobuf 处理
reqwest = "0.11.17" # http 请求
serde = {version="1", features=["derive"]} # 序列化/反序列化数据
tokio = { version = "1", features = ["full"] } # 异步运行时
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] } # 异步中间件
tower-http = { version = "0.4.0", features = ["add-extension", "compression-full"] } # 异步中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3.17" # 日志和追踪

[build-dependencies]
prost-build = { version = "0.11.9"}
